<resources>
    <string name="app_name">ShareFood</string>
    <string name="key_map">AIzaSyABKY9_KbesPBEoG51tfy54jt2RXGbWhK0</string>
    <string name="welcome">Welcome to Share Food</string>
    <string name="special">Highlights</string>
    <string name="list_food">List of dishes</string>
    <string name="search">Search</string>
    <string name="category">Menu</string>
    <string name="map">Map</string>
    <string name="list_restaurant">Restaurant list</string>
    <string name="login">Login</string>
    <string name="register_restaurant">Register restaurant</string>
    <string name="check_connect">The connection is unstable.</string>
    <string name="select_quantum">Choose quantity</string>
    <string name="quantum">Enter the amount you want to place...</string>
    <string name="distance_error">You cannot order this dish due to geographical distance.</string>
    <string name="added">Added</string>
    <string name="into_cart">Go to the cart.</string>
    <string name="shopping_cart">Cart</string>
    <string name="total">Total money:</string>
    <string name="pay">Pay</string>
    <string name="count_none">Empty cart</string>
    <string name="max_count">The maximum number is 99</string>
    <string name="food_detail">Food information</string>
    <string name="call">Contact ordering</string>
    <string name="res_info">Restaurant information</string>
    <string name="food_info">Food information</string>
    <string name="recipe">Recipe</string>
    <string name="comments">Comments</string>
    <string name="select_province">Choose province</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Login account...</string>
    <string name="password">Password...</string>
    <string name="name">Name...</string>
    <string name="phone">Phone...</string>
    <string name="address">Address...</string>
    <string name="register">Register</string>
    <string name="into_info">You need to enter enough information</string>
    <string name="login_fail">Username or password incorrect</string>
    <string name="login_success">Login success</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register_success">Register success</string>
    <string name="logout">Logout</string>
    <string name="view">View</string>
    <string name="error">An unknown error</string>
    <string name="send">Send</string>
    <string name="enter_comment">Enter comments...</string>
    <string name="login_please">You need to login</string>
    <string name="name_restaurant">Name restaurant...</string>
    <string name="open_restaurant">Giờ mở cửa...</string>
    <string name="close_restaurant">Giờ đóng cửa...</string>
    <string name="web">Website...</string>
    <string name="logo">Link logo...</string>
    <string name="name_res">Tên nhà hàng</string>
    <string name="open_time">Open time</string>
    <string name="close_time">Close time</string>
    <string name="address_res">Address</string>
    <string name="phone_res">Phone restaurant</string>
    <string name="website">Website</string>
    <string name="logo_res">Logo restaurant</string>
    <string name="thumbnai_res">Image restaurant</string>
    <string name="fav">Favorite</string>
    <string name="password_comfirm">Comfirm password</string>
    <string name="comfirm">Comfirm</string>
    <string name="cancle">Cancle</string>
    <string name="edit_info">Edit info</string>
    <string name="update_info">Update</string>
    <string name="forget_password">Forgot password</string>
    <string name="remember_password">Remenber password</string>
    <string name="gmail_comfirm">User name</string>
    <string name="code_comfirm">Code comfirm</string>
    <string name="type_code">Type code comfirm</string>
    <string name="send_gamil">Send</string>
    <string name="forgot_pass_fail">Phát sinh lỗi</string>
    <string name="forgot_pass_success">Mật khẩu đã được gửi vào tin nhắn của bạn.</string>
    <string name="insert_info">Bạn cần nhập đủ thông tin.</string>
</resources>
