<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    tools:context=".fragment.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:id="@+id/edtUserNameUpdate"
                android:layout_marginTop="80dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:padding="10dp"
                android:inputType="text"
                android:hint="@string/user_name"
                android:background="@drawable/background_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtPasswordUpdate"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:padding="10dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:background="@drawable/background_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtNameUpdate"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_perm_contact_calendar_black_24dp"
                android:padding="10dp"
                android:inputType="text"
                android:hint="@string/name"
                android:background="@drawable/background_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtPhoneUpdate"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:padding="10dp"
                android:inputType="number"
                android:hint="@string/phone"
                android:background="@drawable/background_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/edtAddressUpdate"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:drawablePadding="15dp"
                android:drawableLeft="@drawable/ic_address"
                android:padding="10dp"
                android:inputType="text"
                android:hint="@string/address"
                android:background="@drawable/background_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnComfirmUpdate"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                style="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:background="@drawable/background_login"
                android:text="@string/update_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:layout_marginBottom="20dp"
                android:id="@+id/btnCancleUpdate"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                style="?android:attr/textAppearanceMedium"
                android:textColor="@color/white"
                android:background="@drawable/background_login"
                android:text="@string/cancle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>