<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_height="wrap_content">
    <EditText
        android:id="@+id/edtPasswordComfirm"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawablePadding="15dp"
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/password_comfirm"
        android:background="@drawable/background_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btnComfirm"
            style="?android:attr/textAppearanceMedium"
            android:background="@drawable/background_login"
            android:textColor="#fff"
            android:text="@string/comfirm"
            android:layout_marginRight="30dp"
            android:layout_height="wrap_content" />
        <Button
            android:layout_width="wrap_content"
            android:id="@+id/btnCancle"
            android:textColor="#fff"
            style="?android:attr/textAppearanceMedium"
            android:background="@drawable/background_login"
            android:text="@string/cancle"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>