<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".fragment.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:src="@drawable/ic_logo_flash" />
            <ImageView
                android:id="@+id/imgDemoLogin"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="right|center_vertical"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_share_option" />
            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_button"
                android:drawableLeft="@drawable/ic_person_black_24dp"
                android:drawablePadding="15dp"
                android:hint="@string/user_name"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_button"
                android:drawableLeft="@drawable/ic_lock_black_24dp"
                android:drawablePadding="15dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:text="@string/remember_password"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/checkbox"
                    android:buttonTint="@color/white"
                    android:layout_marginTop="20dp"
                    android:textColor="#FFFFFF"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="20dp"
                    android:id="@+id/forgetPassword"
                    android:textColor="#FFFFFF"
                    android:text="@string/forget_password"
                    android:layout_height="wrap_content" />
            </LinearLayout>


            <Button
                android:id="@+id/btnLogin"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="70dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/background_login"
                android:text="@string/login"
                android:textColor="@color/white" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>