<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/forget_password"
        android:textColor="#fff" />
    <EditText
        android:id="@+id/edtEmailForgot"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:lines="1"
        android:drawablePadding="15dp"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:hint="@string/gmail_comfirm"
        android:background="@drawable/background_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20sp"
        android:id="@+id/tv_code_comfirm"
        android:textSize="20sp"
        android:text="@string/forget_password"
        android:textColor="#fff"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edtCodeForgot"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:drawablePadding="15dp"
        android:padding="10dp"
        android:inputType="text"
        android:hint="@string/gmail_comfirm"
        android:background="@drawable/background_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/time"
        android:visibility="gone"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text=""
        android:textColor="#fff" />
    <Button
        android:id="@+id/btnCode"
        style="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/background_login"
        android:text="@string/send_gamil"
        android:layout_marginBottom="20sp"
        android:textColor="@color/white" />


</LinearLayout>